Freedom Sanbox Ant Deploy/src/objects/Commission__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Year_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Max Year Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Year_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Year Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trail_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Trail Commission Value should be in Percentage</inlineHelpText>
        <label>Trail Commission</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upfront_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Upfront Commission Value should be in Percentage</inlineHelpText>
        <label>Upfront Commission</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <displayFormat>COM-{000000}</displayFormat>
        <label>Commission Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>